--- a/ansible/roles/prometheus/prometheus.yml
+++ b/ansible/roles/prometheus/prometheus.yml
@@ -20,8 +20,8 @@ rule_files:
 scrape_configs:
   - job_name: 'prometheus'
     static_configs:
-    - targets: ['34.224.223.20:9090']
+    - targets: ['localhost:9090']
   - job_name: 'jenkins'
     metrics_path: /prometheus/
     static_configs:
-    - targets: ['34.224.223.20:8080']
+    - targets: ['localhost:8080']
